--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,6 +3,9 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+._footer-flex {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
